# storable-rs

./: Cargo.toml
serde-storable/: Cargo.toml
serde-storable/src/: de.rs  error.rs  lib.rs
storable/: Cargo.toml
storable/examples/: read_and_dump.rs
storable/fuzz/: Cargo.toml
storable/fuzz/fuzz_targets/: thaw_without_magic.rs
storable/src/: error.rs  lib.rs  markers.rs  perl_value.rs  thaw_reader.rs  thaw_settings.rs  value.rs  vstring.rs
storable/src/tests/: mod.rs
