[package]
name = "serde_storable"
version = "0.1.0"
authors = ["Andrea Nall <anall@andreanall.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
storable = { path = "../storable" }

[dev-dependencies]
serde_derive = "1.0"
serde_bytes = "0.11"